Updated ClassScheduleServiceTest